# S5-APP5

./: mandat.txt  megabook.py
.devcontainer/: devcontainer.json  docker-compose.yml
code/: pyproject.toml
code/jupyter/: 00-intro.ipynb  01-mandat.ipynb  02-mandat.ipynb  03-mandat.ipynb  Mandat 2_ Statistiques descriptives et inférence statistique.ipynb  Simulation de joueurs actifs par minute.ipynb  intro.ipynb  mandat-01.ipynb  my_notebook.ipynb
code/notebooks/: descriptive-stats.py  example.py  mandat-01.py  mandat-02.py  mandat-03.py  megabook.py
code/notebooks/tmp/: instructions_1.md
rapport/: 00-intro.tex  00-main.tex  01-mandat.tex  01-probabilites.tex  02-mandat.tex  02-stats-descriptive.tex  03-mandat.tex  03-monte-carlo.tex  notebook-utils.sty
rapport/backup/: 01-mandat.tex  02-mandat.tex  03-mandat.tex
