[project]
name = "code"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "np>=1.0.2",
    "polars>=1.39.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "mcp>=1",
    "pydantic>=2",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
